--- a/m2/s1/g3/bio_honey/product_card/index.html
+++ b/m2/s1/g3/bio_honey/product_card/index.html
@@ -17,15 +17,15 @@
         <div class="caratteristiche">
           <div class="testo">
             <div class="tecniche">
-                <p>100% Bio Honey</p>
-                <p>Italian, not treated</p>
+                <p class="color-brown" id="special">100% Bio Honey</p>
+                <p class="color-brown">Italian, not treated</p>
             </div>
             <div class="prezzo">
-                <p>7$/Kg</p>
+                <p class="color-brown">7$/Kg</p>
             </div>
           </div>
           <div class="bottone">
-            <button>Add to cart</button>
+            <button class="color-brown">Add to cart</button>
           </div>
         </div>
       </div>
